# daa-data-analysis

./: README.md  pyproject.toml
Python/Notebooks/: 101 - Python Crash Course Exercises.ipynb  101 - Python Crash Course.ipynb  101x - Merging & Joining.ipynb  102 - basic Numpy.ipynb  103 - basic Pandas.ipynb  104 - Data Visualisation with Plotly.ipynb  105 - missing data.ipynb  106 - Data Input and Output.ipynb  10x - GroupBy.ipynb  10x - Pandas operations.ipynb  10x - Pizza Dataset Exercises.ipynb  10x - Pizza Dataset Exercises_solution.ipynb
