[tool.poetry]
name = "python_data_analysis"
version = "0.0.1"
description = ""
authors = ["Michal Kominek <michal.kominek@thedotcollectice.co.uk>"]
readme = "README.md"
packages = [{include = "python_data_analysis"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.5.3"
plotly = "^5.14.1"
tqdm = ">=4.48.2,<4.65"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
jupyterlab-code-formatter = "2.2.1"
jupyterlab = "^4.0.6"
black = "^23.3.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
